<resources>
    <string name="app_name">WishKart</string>
    <string name="sign_in_as">Sign in as</string>
    <string name="individual">Individual</string>
    <string name="or">OR</string>
    <string name="ngo">NGO</string>
    <string name="user">User</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="verify_number_hint">Please enter your mobile number. You will get a SMS including a verification code.</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="next">Next</string>
    <string name="verify_otp_details">Waiting to automatically detect an SMS sent to\n +919818170957 Wrong Number?</string>
    <string name="waiting_text">Waiting to automatically detect an SMS sent to\n %s Wrong Number?</string>
    <string name="hint">------</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="verify">Verify</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="verify_number">Verify %s</string>
    <string name="seconds_remaining">"Seconds remaining: %d"</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_fill_all_the_below_details_correctly_and_carefully">Please fill all the below details correctly and carefully</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="phone_number">Phone Number</string>
    <string name="type_your_street_address_here">Type your street address here</string>
    <string name="type_your_city_name_here">Type your city name here</string>
    <string name="type_your_pincode_here">Type your PinCode here</string>
    <string name="type_your_country_name_here">Type your country name here</string>
    <string name="ngo_certificate_number">NGO\'s certificate number</string>
    <string name="upload_your_ngo_certificate">Upload your NGO\'s certificate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="your_deals">WishKart</string>
    <string name="notification">Notification</string>
    <string name="rate_us">Rate Us</string>
    <string name="menu_home">Home</string>
    <string name="menu_sell">Sell</string>
    <string name="menu_buy">Buy</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_help">Help</string>
    <string name="name">Name</string>
    <string name="user_address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="pincode">PinCode</string>
    <string name="country">Country</string>
    <string name="certificate_number">Certificate Number</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="your_ngo_certificate">Your NGO\'s Certificate</string>
    <string name="delete_account">Delete Account</string>
    <string name="sell_buy_and_donate">Sell, Buy and Donate</string>
    <string name="product_details">Product Details</string>
    <string name="product_name">Product Name</string>
    <string name="select_category">Select Category</string>
    <string name="min_price">Min. Price</string>
    <string name="max_price">Max. Price</string>
    <string name="upload_images">Upload Images</string>
    <string name="product_description">Product Description</string>
    <string name="nothing_to_show_here">Nothing to show here</string>
    <string name="product_category">Product Category</string>
    <string name="product_price">Product Price</string>
    <string name="product_location">Product Location</string>
    <string name="price">Price: %s - %s</string>
    <string name="location">%s, %s</string>
    <string name="remove_product">Remove Product</string>
    <string name="interested">Interested</string>
    <string name="donations">Donations</string>
    <string name="interest">Interest</string>
    <string name="not_interested">Not Interested</string>
    <string name="someone_showed_interest">%s is interested in your %s</string>
    <string name="product_owner_name">Product Owner Name</string>
    <string name="product_owner_phone_number">Product Owner Phone Number</string>
    <string name="product_owner_address">Product Owner Address</string>
    <string name="product_buyer_name">Product Buyer Name</string>
    <string name="product_buyer_phone_number">Product Buyer Phone Number</string>
    <string name="product_buyer_address">Product Buyer Address</string>
    <string name="ngo_name">NGO Name</string>
    <string name="ngo_phone_number">NGO Phone Number</string>
    <string name="ngo_address">NGO Address</string>
    <string name="ngo_certificate">NGO Certificate</string>
    <string name="address">%s, %s - %s, %s</string>
    <string name="mark_as_sold">Sell</string>
    <string name="mark_as_donated">Donate</string>
    <string name="availability">Availability: %s</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="tap_here_to_show_search_panel">Tap here to show search panel</string>
    <string name="search_tap">Tap here to %s search panel</string>
    <string name="help_and_instructions">Help and instructions</string>
    <string name="contact_us">Contact Us</string>
    <string name="login_and_profile">%s</string>
    <string name="sell_product">%s</string>
    <string name="buy_product">%s</string>
    <string name="donate_product">%s</string>
    <string name="donee">%s</string>
    <string name="login_and_profile_text">Login and profile</string>
    <string name="sell_product_text">Sell product</string>
    <string name="buy_product_text">Buy product</string>
    <string name="donate_product_text">Donate product</string>
    <string name="donee_text">Donee</string>
    <string name="note">Note</string>
    <string name="update_number">Update Number</string>
    <string name="enter_new_phone_number">Enter new phone number</string>
</resources>