<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_sell_buy"
            android:title="@string/menu_sell" />
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_sell_buy"
            android:title="@string/menu_buy" />

        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_heart"
            android:title="@string/menu_donate" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
    </group>

</menu>