<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.UserTypeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/sign_in_as"
        android:textAlignment="center"
        android:textColor="@color/bluish_black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/individual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/pink_light"
        android:text="@string/individual"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="64dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/bluish_black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/bluish_black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/bluish_black" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ngo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/pink_light"
        android:text="@string/ngo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="64dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/user"
        android:src="@drawable/user_type" />

</LinearLayout>