<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/product"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:background="@color/bluish_black"
                android:contentDescription="@string/product_name"
                android:scaleType="fitXY"
                android:src="@drawable/user_product" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/product"
                android:padding="4dp"
                android:text="@string/product_name"
                android:textColor="@color/bluish_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/productName"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/product"
                android:padding="4dp"
                android:text="@string/product_category"
                android:textColor="@color/bluish_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/productCategory"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/product"
                android:padding="4dp"
                android:text="@string/product_price"
                android:textColor="@color/bluish_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productPrice"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:padding="4dp"
                android:text="@string/product_location"
                android:textColor="@color/bluish_black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>